--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "eslint-plugin-yml": "1.14.0",
     "prettier": "3.3.3"
   },
+  "resolutions": {
+    "@eslint/plugin-kit": "^0.2.3"
+  },
   "scripts": {
     "lint": "eslint . --quiet"
   }
